# tufa

./: .env.example  Cargo.toml  README.md
migrations/2023-02-12-191406_initial/: down.sql  up.sql
src/: cli.rs  crypto.rs  db.rs  main.rs  models.rs  otp.rs  schema.rs  util.rs
src/cli/: add.rs  gen.rs  mod.rs  rm.rs
src/db/: mod.rs  schema.rs
src/db/models/: service.rs
tufa-client/: Cargo.toml  local.db
tufa-client/migrations/2023-02-12-191406_initial/: up.sql
tufa-client/src/: crypto.rs  lib.rs  otp.rs
tufa-client/src/db/: mod.rs
tufa-client/src/db/models/: service.rs
tufa-common/: Cargo.toml
tufa-server/: Cargo.toml
