[package]
name = "tufa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenv = "0.15.0"
hex = "0.4.3"
hex-literal = "0.3.4"
hmac = "0.12.1"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
sha1 = "0.10.5"
