[package]
name = "tufa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
clap = { version = "4.1.4", features = ["derive"] }
diesel = { version = "2.0.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35" ] }
dotenv = "0.15.0"
hex = "0.4.3"
hex-literal = "0.3.4"
hmac = "0.12.1"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
scrypt = "0.10.0"
sha1 = "0.10.5"
