[package]
name = "tufa-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tufa-common = { path = "../tufa-common", version = "0.1.0" }

dotenv = "0.15.0"
anyhow = "1.0.69"
aes-gcm = "0.10.1"
argon2 = "0.4.1"
base32 = "0.4.0"
diesel = { version = "2.0.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35" ] }
diesel_migrations = "2.0.0"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
hex = "0.4.3"
hmac = "0.12.1"
sha1 = "0.10.5"
